2005-02-10  Øyvind Kolås  <pippin@freedesktop.org>

	* packages/cairo/lib/cairo.rb: made save_internal private,
	patch from <mental@rydia.net>

2005-02-10  Øyvind Kolås  <pippin@freedesktop.org>

	* packages/svgcairo/ext/rb_svgcairo.c: added error handling.
	usage of a port for passing FILE stream to the parser.
	* packages/svgcairo/ext/extconf.rb: added -W to the compile flags.

2005-02-10  Øyvind Kolås  <pippin@freedesktop.org>

	* packages/svgcairo/ext: added initial binding for libsvg-cairo,
	without error checking, and good integration with the ruby file
	handling.

005-02-09  Øyvind Kolås  <pippin@freedesktop.org>

	* packages/cairo/lib/cairo.rb: Fixed naming of Transform class to be
	Matrix.

2005-02-09  Øyvind Kolås  <pippin@freedesktop.org>

	* packages/cairo/lib/cairo.rb: Added the ability for save to
	take a block.

2005-02-07  Øyvind Kolås  <pippin@freedesktop.org>

	* splitted into seperate files for classes
	* made use of _SELF macro for more direct access
	* unified under a rb_ namespace
	* added font handling and extents

2005-02-06  Øyvind Kolås  <pippin@freedesktop.org>

	* imported mental guys ruby binding to my local tree
	* added ps and pdf surfaces
	* reindented according to GNU coding style
	* made stroke, fill, in_stroke, in_fill, fill_extents and
	  stroke_extents accept blocks that define the path, in spirit
	  of the previous binding.
	* added show_text, text_path, select_font, scale_font and
	  transform_font
	* made to work with gtkcairo


2005-02-06  Øyvind Kolås  <pippin@freedesktop.org>

	* packages/cairo/cairo.c: add new headers
	* packages/cairo/gen-Cairo.c: remove unneeded hack to force
	unit size on newly set font.

2004-11-19  Øyvind Kolås  <pippin@freedesktop.org>

	* packages/canvas/lib/canvas.rb Labal.width: access extents by atom
	instead of string.

2004-11-19  Øyvind Kolås  <pipipn@freedesktop.org>

	* packages/cairo/ext/*.[ch]: reformatted code.
	* packages/gtkcairo/ext/*.[ch]: reformatted code.